# peregrine

peregrine-ardu/: .gitignore  platformio.ini
peregrine-ardu/lib/Debug/: Debug.h  Debug.hpp
peregrine-ardu/lib/FileManager/: FileManager.cpp  FileManager.h
peregrine-ardu/src/: main.cpp
peregrine-pcb/: .gitignore  fp-info-cache  peregrine.kicad_pcb  peregrine.kicad_prl  peregrine.kicad_pro  peregrine.kicad_sch
peregrine-rs/: Cargo.toml  LICENSE  README.md
peregrine-rs/.cargo/: config.toml
peregrine-rs/bmp280-ehal/: Cargo.toml
peregrine-rs/bmp280-ehal/src/: bmp280.rs  lib.rs
peregrine-rs/bmp280-ehal/src/interface/: i2c.rs  mod.rs  spi.rs
peregrine-rs/peregrine/: Cargo.toml
peregrine-rs/peregrine/src/: filter.rs  lib.rs  main.rs
peregrine-rs/src/: lib.rs  main.rs
