[package]
name = "bmp280-ehal"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-rp = {workspace = true}
embassy-usb-logger = {workspace = true}
embassy-sync = {workspace = true}
embassy-executor={workspace = true}
embassy-time = {workspace = true}
embedded-hal = {workspace = true}
nalgebra = {workspace = true}
defmt = {workspace =true}
cortex-m = {workspace = true}
cortex-m-rt = {workspace = true}
log = {workspace = true}
panic-probe = {workspace = true}
defmt-rtt = {workspace = true}
